# Updated-RAG-RPC

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gradio  LICENSE  Makefile  README.md  docker-compose.yml  download_actual_screens.py  pyproject.toml
.github/workflows/: ci.yml  claude-code.yml
airflow/: Dockerfile  entrypoint.sh  requirements-airflow.txt
airflow/dags/: .gitkeep  concept_graph_builder.py  daily_arxiv_ingestion.py  nightly_eval.py  reranker_trainer.py
airflow/plugins/: .gitkeep
docs/: OPERATIONS.md  STARTUP.md  architecture.md  runbook.md  setup_and_operations.md
frontend/: DESIGN.md  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: chat.spec.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  collections.ts  types.ts
frontend/src/components/chat/: AgentTracePanel.tsx  AssistantMessage.tsx  ChatView.tsx  CitationChip.tsx  FeedbackBar.tsx  Greeting.tsx  PdfJsViewer.tsx  PdfViewerPanel.tsx  PromptBar.tsx  SourcesPanel.tsx
frontend/src/components/galaxy/: GalaxyView.tsx
frontend/src/components/layout/: AppShell.tsx  BottomNav.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/research/: ResearchView.tsx
frontend/src/components/system/: EvalTrendChart.tsx  SystemView.tsx
frontend/src/hooks/: useAskStream.ts  useSessions.ts  useSpeechInput.ts  useTheme.ts
frontend/src/lib/: activeCollection.ts  exportConversation.ts  snippetMatch.ts
frontend/src/styles/: index.css
grafana/provisioning/: .gitkeep
grafana/provisioning/dashboards/: corpus.json  dashboards.yml
prometheus/: prometheus.yml
scripts/: restore.ps1  train_reranker.py
src/: __init__.py  config.py  dependencies.py  main.py  read_log.py  run_ingest.py  run_mock_api.py  run_reindex.py
src/agents/: __init__.py  heuristics.py  prompts.py  rag_graph.py  tools.py
src/clients/: __init__.py  gradio_app.py  telegram_bot.py
src/clients/static/: index.html
src/db/: __init__.py  migrations.py  opensearch.py  opensearch_mapping.py  postgres.py
src/ingestion/: __init__.py  arxiv_source.py  chunker.py  interfaces.py  orchestrator.py  pdf_parser.py
src/middleware/: __init__.py  auth.py  metrics.py  rate_limiter.py  request_id.py
src/models/: __init__.py  paper.py
src/retrieval/: __init__.py  context_builder.py  hybrid_search.py  reranker.py
src/routers/: __init__.py  ask.py  collections.py  concepts.py  eval.py  feedback.py  health.py  integrations.py  research.py  sessions.py
src/schemas/: __init__.py  ask.py  health.py
src/services/: __init__.py  arq_worker.py  audio_overview.py  canary.py  concept_extractor.py  deadletter.py  deep_research.py  embedding_client.py  guardrails.py  jina_client.py  llm_adapter.py  model_select.py  paper_admin.py  ragas_sampler.py  redis_client.py  redis_services.py  resilience.py  tracing.py  zotero_client.py
static/: .gitkeep
stitch_assets/: Corpus - Agent Reasoning.html  Corpus - Library.html  Corpus - Mobile Ask.html  Corpus AI Knowledge Flow.html  Design Proposal - Antigravity Research Galaxy.md  Motion System Spec.txt  design_systems.json
stitch_assets_actual/: ask_new_thread.html  shader.html
tests/: __init__.py  conftest.py
tests/eval/: eval_golden.py
tests/integration/: __init__.py  test_api_stream.py  test_concepts_router.py  test_ingestion.py  test_integrations_router.py  test_rag_graph.py
tests/unit/: __init__.py  test_audio_overview.py  test_canary.py  test_chunk_dedup.py  test_context_builder.py  test_deadletter.py  test_deep_research.py  test_guardrails.py  test_health.py  test_llm_adapter.py  test_paper_admin.py  test_parser.py  test_rate_limiter.py  test_redis_services.py  test_reference_stripping.py  test_request_id.py  test_reranker.py  test_reranker_promotion.py
