[project]
name = "corpus"
version = "0.1.0"
description = "Corpus — Production-Grade Agentic RAG System for Research Papers"
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    # --- Web framework ---
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    # --- Database ---
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.13.3",
    # --- Search ---
    "opensearch-py>=3.0.0",
    # --- HTTP ---
    "requests>=2.32.3",
    "httpx>=0.28.1",
    # --- Document parsing (Phase 1) ---
    "docling>=2.43.0",
    "python-dateutil>=2.9.0.post0",
    # --- Embeddings (Phase 1) ---
    "sentence-transformers>=5.1.0",
    # --- Agent orchestration (Phase 3) ---
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    # --- Resilience ---
    "tenacity>=9.0.0",
    # --- Observability ---
    "structlog>=24.1.0",
    "langfuse>=3.0.0",
    "prometheus-client>=0.21.0",
    # --- Cache / queue ---
    "redis>=5.0.0",
    "arq>=0.26.0",
    # --- LLM adapter ---
    "litellm>=1.40.0",
    # --- Client interfaces (Phase 5) ---
    "python-telegram-bot>=21.0,<22.0",
    # --- Misc ---
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "markdown>=3.10.2",
    "piper-tts>=1.5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "anyio[trio]>=4.9.0",
    "asgi-lifespan>=2.1.0",
    "httpx>=0.28.1",
    "ruff>=0.11.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "locust>=2.32.0",
    "ragas>=0.4.3",
    "deepeval>=1.0.0",
]

[tool.ruff]
line-length = 120
exclude = [".venv/**", "airflow/**"]
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern (`db=Depends(get_db_session)`, file
# uploads via `File(...)`) calls these in argument defaults by design — that's
# how FastAPI resolves them per-request. Not the mutable-default-arg bug B008
# guards against elsewhere.
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.File", "fastapi.Query", "fastapi.Security"]

[tool.ruff.lint.per-file-ignores]
# Long single-line LLM prompt templates and mock fixture data — wrapping them
# would fight the content, not improve readability.
"src/agents/prompts.py" = ["E501"]
"src/run_mock_api.py" = ["E402", "E501"]
# sys.path manipulation must precede these local imports in standalone scripts.
"src/run_ingest.py" = ["E402"]
"src/services/arq_worker.py" = ["E402"]
"src/clients/telegram_bot.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "requires_ollama: test needs a reachable Ollama server (auto-skipped when unreachable)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true

# The models use SQLAlchemy's legacy Column() style, so without the (now
# deprecated) SQLAlchemy mypy plugin, ORM attribute writes read as
# `Column[T] = T` assignment errors — false positives, not real type bugs.
# Scope the suppression to the ORM-write-heavy modules. Long-term fix is
# migrating the models to 2.0 Mapped[...] annotations.
[[tool.mypy.overrides]]
module = ["src.ingestion.orchestrator", "src.routers.sessions"]
disable_error_code = ["assignment"]

# python-telegram-bot types Update.message as Optional, but command handlers
# are only ever invoked with a message present. Opt-in module.
[[tool.mypy.overrides]]
module = ["src.clients.telegram_bot"]
disable_error_code = ["union-attr"]

# Test double for the Playwright E2E suite — not shipped in the app.
[[tool.mypy.overrides]]
module = ["src.run_mock_api"]
disable_error_code = ["var-annotated", "attr-defined", "arg-type"]
